--- a/Orders/Orders.Frontend/Pages/Countries/CountryCreate.razor
+++ b/Orders/Orders.Frontend/Pages/Countries/CountryCreate.razor
@@ -2,4 +2,4 @@
 
 <h3>Nuevo País</h3>
 
-<CountryForm @ref="_countryForm" Country="_country" OnValidSubmit="CreateAsync" ReturnAction="Return" />
+<CountryForm @ref="countryForm" Country="country" OnValidSubmit="CreateAsync" ReturnAction="Return" />
