--- a/Orders/Orders.Frontend/Pages/Categories/CategoryCreate.razor
+++ b/Orders/Orders.Frontend/Pages/Categories/CategoryCreate.razor
@@ -2,4 +2,4 @@
 
 <h3>Nueva Categoría</h3>
 
-<CategoryForm @ref="categoryForm" Category="category" OnValidSubmit="CreateAsync" ReturnAction="Return" />
+<FormWithName @ref="categoryForm" Label="Categoría" Model="category" OnValidSubmit="CreateAsync" ReturnAction="Return" />
