--- a/Orders/Orders.Frontend/_Imports.razor
+++ b/Orders/Orders.Frontend/_Imports.razor
@@ -11,3 +11,4 @@
 @using Orders.Shared.Entities;
 @using Orders.Frontend.Repositories
 @using Orders.Frontend.Shared
+@using Orders.Shared.Interfaces
