--- a/Orders/Orders.Frontend/Pages/Countries/CountriesIndex.razor
+++ b/Orders/Orders.Frontend/Pages/Countries/CountriesIndex.razor
@@ -13,6 +13,7 @@
             <thead>
                 <tr>
                     <th>País</th>
+                    <th>Estados / Provincias</th>
                     <th></th>
                 </tr>
             </thead>
@@ -21,9 +22,11 @@
                 {
                     <tr>
                         <td>@country.Name</td>
+                        <td>@country.StateNumber</td>
                         <td>
-                            <a href="/countries/edit/@country.Id" class="btn btn-warning">Editar</a>
-                            <button @onclick="@(() => DeleteAsync(country))" class="btn btn-danger">Borrar</button>
+                            <a href="/countries/edit/@country.Id" class="btn btn-sm btn-warning">Editar</a>
+                            <a href="/countries/details/@country.Id" class="btn btn-sm btn-info">Detalles</a>
+                            <button @onclick="@(() => DeleteAsync(country))" class="btn btn-sm btn-danger">Borrar</button>
                         </td>
                     </tr>
                 }
