Pagination From Backend

--- a/Orders/Orders.Frontend/Pages/Countries/CountriesIndex.razor
+++ b/Orders/Orders.Frontend/Pages/Countries/CountriesIndex.razor
@@ -22,7 +22,7 @@
                 {
                     <tr>
                         <td>@country.Name</td>
-                        <td>@country.StateNumber</td>
+                        <td>@country.StatesNumber</td>
                         <td>
                             <a href="/countries/edit/@country.Id" class="btn btn-sm btn-warning">Editar</a>
                             <a href="/countries/details/@country.Id" class="btn btn-sm btn-info">Detalles</a>
