Pagination on States and Cities

--- a/Orders/Orders.Frontend/Pages/Countries/CountriesIndex.razor
+++ b/Orders/Orders.Frontend/Pages/Countries/CountriesIndex.razor
@@ -9,12 +9,16 @@
 <GenericList MyList="Countries">
 
     <Body>
+        <Pagination CurrentPage="currentPage"
+            TotalPages="totalPages"
+            SelectedPage="SelectedPageAsync" />
+
         <table class="table table-striped">
             <thead>
                 <tr>
                     <th>País</th>
-                    <th>Estados / Provincias</th>
-                    <th></th>
+                    <th style="width:210px">Estados / Provincias</th>
+                    <th style="width:210px"></th>
                 </tr>
             </thead>
             <tbody>
