--- a/Orders/Orders.Frontend/Pages/Categories/CategoriesIndex.razor
+++ b/Orders/Orders.Frontend/Pages/Categories/CategoriesIndex.razor
@@ -9,11 +9,15 @@
 <GenericList MyList="Categories">
 
     <Body>
+        <Pagination CurrentPage="currentPage"
+                    TotalPages="totalPages"
+                    SelectedPage="SelectedPageAsync" />
+
         <table class="table table-striped">
             <thead>
                 <tr>
                     <th>Categoría</th>
-                    <th></th>
+                    <th style="width:180px"></th>
                 </tr>
             </thead>
             <tbody>
