--- a/Orders/Orders.Frontend/Shared/Pagination.razor
+++ b/Orders/Orders.Frontend/Shared/Pagination.razor
@@ -1,5 +1,12 @@
-﻿<h3>Pagination</h3>
-
-@code {
-
-}
+﻿<nav>
+    <ul class="pagination">
+        @foreach (var link in links)
+        {
+            <li @onclick=@(() => InternalSelectedPage(link))
+                style="cursor: pointer"
+                class="page-item @(link.Enable ? null : "disable") @(link.Enable ? "active" : null)">
+                <a class="page-link">@link.Text</a>
+            </li>
+        }
+    </ul>
+</nav>
