--- a/Orders/Orders.Frontend/Pages/Countries/CountriesDetails.razor
+++ b/Orders/Orders.Frontend/Pages/Countries/CountriesDetails.razor
@@ -19,12 +19,18 @@ else
                         TotalPages="totalPages"
                         SelectedPage="SelectedPageAsync" />
 
+            <div class="mb-2" style="display:flex; flex-wrap:wrap; align-items:center;">
+                <input style="width: 400px;" type="text" class="form-control" id="titulo" placeholder="Buscar Estado / Provincia..." @bind-value="Filter" />
+                <button type="button" class="btn btn-outline-primary mx-1" @onclick="ApplyFilterAsync">Filtrar</button>
+                <button type="button" class="btn btn-outline-danger mx-1" @onclick="CleanFilterAsync">Limpiar</button>
+            </div>
+
             <table class="table table-striped">
                 <thead>
                     <tr>
                         <th>Estado / Provincia</th>
                         <th style="width:90px">Ciudades</th>
-                        <th style ="width:210px"></th>
+                        <th style="width:210px"></th>
                     </tr>
                 </thead>
                 <tbody>
