--- a/Orders/Orders.Frontend/Layout/NavMenu.razor
+++ b/Orders/Orders.Frontend/Layout/NavMenu.razor
@@ -11,22 +11,26 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Inicio
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="categories">
-                <span class="bi bi-list-task-fill-nav-menu" aria-hidden="true"></span> Categorias
-            </NavLink>
-        </div>        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="countries">
-                <span class="bi bi-globe-americas-fill-nav-menu" aria-hidden="true"></span> Paises
-            </NavLink>
-        </div>
+        <AuthorizeView Roles="Admin">
+            <Authorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="categories">
+                        <span class="bi bi-list-task-fill-nav-menu" aria-hidden="true"></span> Categorias
+                    </NavLink>
+                </div>        <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="countries">
+                        <span class="bi bi-globe-americas-fill-nav-menu" aria-hidden="true"></span> Paises
+                    </NavLink>
+                </div>
+            </Authorized>
+        </AuthorizeView>
         @* <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
+        <NavLink class="nav-link" href="weather">
+        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+        </NavLink>
         </div> *@
     </nav>
 </div>
