--- a/Orders/Orders.Frontend/Pages/Home.razor
+++ b/Orders/Orders.Frontend/Pages/Home.razor
@@ -2,6 +2,11 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<AuthorizeView Roles="Admin">
+    <Authorized>
+        <p>Bienvenido a la aplicación de pedidos, @context.User.Identity?.Name</p>
+    </Authorized>
+    <NotAuthorized>
+        <p>Por favor, inicie sesión para acceder a la aplicación de pedidos</p>
+    </NotAuthorized>
+</AuthorizeView>
